Форма для создание комнаты

--- a/src/components/UI/button/btn-text/BtnText.module.less
+++ b/src/components/UI/button/btn-text/BtnText.module.less
@@ -4,18 +4,22 @@
 .container {
     .regular-family;
     outline: none;
-    border: 1px solid @navbar-icon-color;
+    border: 1px solid @regular-text-color;
     background-color: transparent;
     border-radius: .5rem;
     padding: .4rem;
     cursor: pointer;
-    width: 5rem;
-    color: @navbar-icon-color;
+    color: @regular-text-color;
     transition-property: font-color, border-color;
     transition: .2s ease;
-}
 
-.container:hover {
-    border-color: @active-text-color;
-    color: @active-text-color;
+    &:disabled {
+        border-color: @hide-text-color;
+        color: @hide-text-color;
+    }
+
+    &:hover:enabled {
+        border-color: @normal-color;
+        color: @normal-color;
+    }
 }
