--- a/src/components/UI/input/input-text/InputText.module.less
+++ b/src/components/UI/input/input-text/InputText.module.less
@@ -9,14 +9,15 @@
         align-items: flex-end;
         width: 100%;
         outline: none;
-        padding-left: .5rem;
-        padding-top: 1rem;
+        // padding-left: .5rem;
+        // padding-top: 1rem;
         padding-right: 2rem;
         padding-bottom: 0rem;
         color: @regular-text-color;
         background-color: transparent;
         font-size: .85rem;
         border: none;
+        border-bottom: 1px solid @hide-text-color;
         // background-color: aquamarine;
 
         &::placeholder {
