--- a/src/components/UI/input/areatext/MyTextarea.module.less
+++ b/src/components/UI/input/areatext/MyTextarea.module.less
@@ -10,7 +10,7 @@
 
     .myTextarea {
         .regular-family;
-        padding: .5rem .5rem;
+        padding: .5rem 0;
         padding-right: 1.5rem;
         width: 100%;
         height: auto;
