создание комнаты - верстка

--- a/src/components/UI/button/btn-text/BtnText.module.less
+++ b/src/components/UI/button/btn-text/BtnText.module.less
@@ -3,11 +3,12 @@
 
 .container {
     .regular-family;
+    // font-weight: 600;
     outline: none;
-    border: 1px solid @regular-text-color;
+    border: 2px solid @regular-text-color;
     background-color: transparent;
     border-radius: .5rem;
-    padding: .4rem;
+    padding: .3rem;
     cursor: pointer;
     color: @regular-text-color;
     transition-property: font-color, border-color;
@@ -19,7 +20,7 @@
     }
 
     &:hover:enabled {
-        border-color: @normal-color;
-        color: @normal-color;
+        border-color: @icon-color2;
+        color: @icon-color2;
     }
 }
