--- a/src/components/UI/input/input-date/InputDate.module.less
+++ b/src/components/UI/input/input-date/InputDate.module.less
@@ -36,7 +36,8 @@
         color: @regular-text-color;
         .regular-family;
         font-size: .85rem;
-
+        background-color: transparent;
+        color-scheme: dark;
 
         &::placeholder {
             font-size: .85rem;
