--- a/src/components/UI/input/input-time/InputTimeHMS.module.less
+++ b/src/components/UI/input/input-time/InputTimeHMS.module.less
@@ -15,8 +15,10 @@
         border: 1px solid @hide-text-color;
         border-radius: .5rem;
         color: @regular-text-color;
+        background-color: transparent;
         .regular-family;
         font-size: .85rem;
+        color-scheme: dark;
 
         &::placeholder {
             font-size: .85rem;
