--- a/src/style/color.less
+++ b/src/style/color.less
@@ -1,14 +1,17 @@
-@icon-color: #00a8f7;
+@icon-color: #72549A;
+@icon-color2: #8f6ac0;
 @base-text-color: #232323;
-@regular-text-color: #525252;
-@hide-text-color: #B7BAC1;
-@border-color: #DDE3EE;
+@regular-text-color: #dddddd;
+@hide-text-color: #6b6b6b;
+@border-color: #bbbbbb;
 
-@normal-color: #37ad4b;
+@normal-color: #31c249;
 @alarm-color: #e03c30;
 @warning-color: rgb(255, 196, 0);
 
 @active-text-color: rgb(226, 226, 226);
-
+// @icon-color2: #00a8f7;
 @test: #1158c9;
-@navbar-icon-color: #007bb4;
+@navbar-icon-color: #4b3668;
+@background: #51545c;
+@background2: #474a51;
