--- a/src/components/UI/modal/MyModal.module.less
+++ b/src/components/UI/modal/MyModal.module.less
@@ -1,3 +1,5 @@
+@import '../../../style/color.less';
+
 .modal {
     position: fixed;
     width: 100%;
@@ -27,7 +29,7 @@
     height: fit-content;
     width: fit-content;
     justify-content: center;
-    background-color: rgb(255, 255, 255);
+    background-color: @background;
     box-shadow: 0px 0px 8px 2px rgba(0, 0, 0, 0.438);
     transform: translateY(100%);
     transition: transform .4s;
