--- a/src/components/card-room/CardRoom.module.less
+++ b/src/components/card-room/CardRoom.module.less
@@ -2,8 +2,11 @@
 @import '../../style/layout.less';
 
 .container {
-    width: 200px;
-    height: 200px;
+    .display-flex-column;
+    width: 250px;
+    height: auto;
     border: 1px solid gray;
     border-radius: 10px;
+    padding: 8px;
+    row-gap: 8px;
 }
