--- a/src/components/card-form-create/CardFormCreate.module.less
+++ b/src/components/card-form-create/CardFormCreate.module.less
@@ -6,8 +6,8 @@
     flex-direction: column;
     row-gap: 1rem;
     width: 450px;
-    height: 261.44px;
-    padding: 8px;
+    height: 277.84px;
+    padding: 1rem;
     overflow-y: auto;
 
 
