--- a/src/style/color.less
+++ b/src/style/color.less
@@ -1,5 +1,5 @@
 @icon-color: #72549A;
-@icon-color2: #8f6ac0;
+@icon-color2: #8f6ac0a9;
 @base-text-color: #232323;
 @regular-text-color: #dddddd;
 @hide-text-color: #6b6b6b;
