--- a/src/pages/DetailTradePage.module.less
+++ b/src/pages/DetailTradePage.module.less
@@ -4,11 +4,10 @@
 .container {
     display: flex;
     flex-direction: column;
-    width: 800px;
-    height: 400px;
-    background-color: @background;
-    padding: 8px;
-    row-gap: 8px;
+    width: 1200px;
+    height: auto;
+    padding: 1rem;
+    row-gap: 1rem;
 
     .info {
         display: flex;
