Timer расчеты хода торгов

--- a/src/pages/DetailTradePage.module.less
+++ b/src/pages/DetailTradePage.module.less
@@ -21,3 +21,17 @@
         gap: 8px;
     }
 }
+
+.container2 {
+    display: flex;
+    flex-direction: column;
+    width: 1200px;
+    height: 519px;
+    align-items: center;
+    justify-content: center;
+}
+
+.hms {
+    display: flex;
+    gap: 8px;
+}
