--- a/src/style/color.less
+++ b/src/style/color.less
@@ -1,7 +1,7 @@
 @icon-color: #72549A;
 @icon-color2: #8f6ac0a9;
 @base-text-color: #232323;
-@regular-text-color: #dddddd;
+@regular-text-color: #e9e9e9;
 @hide-text-color: #6b6b6b;
 @border-color: #bbbbbb;
 
@@ -13,5 +13,5 @@
 // @icon-color2: #00a8f7;
 @test: #1158c9;
 @navbar-icon-color: #4b3668;
-@background: #51545c;
+@background: #45484e;
 @background2: #474a51;
